--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,7 @@ mypy-extensions==0.4.3
 pathspec==0.10.3
 platformdirs==2.6.0
 PyJWT==2.6.0
+pyngrok==5.2.1
 pyrsistent==0.19.2
 pytz==2022.7
 PyYAML==6.0
