--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,9 @@ asgiref==3.5.2
 attrs==22.1.0
 black==22.12.0
 click==8.1.3
+colorlog==6.7.0
 Django==4.1.4
+django-request-logging==0.7.5
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 drf-spectacular==0.25.1
